--- a/templates/activate.html
+++ b/templates/activate.html
@@ -1,20 +1,39 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load widget_tweaks %}
 
 {% block per_page_css %}
     <link rel="stylesheet" href="{% static 'css/activate.css' %}">
 {% endblock %}
 
 {% block main_content %}
-    <div class="text-center">
-        <h1>TODO</h1>
-        {{ error }}
-    </div>
+{#    <div class="text-center">#}
+{#        <h1>TODO</h1>#}
+{#        {{ error }}#}
+{#    </div>#}
 
     <!-- until TODO is done -->
 
-    <form method="post" action=''> {% csrf_token %}
+    <form method="post" action="{{ action }}" class="form-signin">
+        <h1 class="h3 mb-3 font-weight-normal">Verify</h1>
+
+        {% csrf_token %}
+        {{ form.non_field_errors }}
+
+        {% for field in form %}
+            <div class="form-label-group">
+                {% render_field field class="form-control" placeholder=field.label %}
+                {{ field.label_tag }}
+                {{ field.errors }}
+                {% if field.help_text %}
+                    <small class="form-text text-muted">
+                        {{ field.help_text | safe }}
+                    </small>
+                {% endif %}
+            </div>
+        {% endfor %}
+
         <input type="text" class='btn btn-default' name="code"/>
         <input type="submit" class='btn btn-default' value="Verify Account"/>
     </form>
