fixed banner image

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -12,7 +12,7 @@
     <div class="container-fluid banner">
         <div class="row">
             <div class="col-md-12 center">
-                <img id="banner-img" src="{% static 'images/Dogear.jpg' %}"/>
+                <img id="banner-img" src="{% static 'images/dogear.jpg' %}"/>
             </div>
         </div>
     </div>
