--- a/templates/edit_account.html
+++ b/templates/edit_account.html
@@ -7,6 +7,7 @@
 	<input type="submit" class='btn btn-default' value="Save Details"/>
 </form>
 
+<a href="{% url 'members:reset_password_form' %}"><button class='btn btn-default'>Reset Password</button></a>
 <a href="{% url 'members:delete' %}"><button class='btn btn-default'>Delete Account</button></a>
 
 {% endblock main_content %}
