Updated Publisher on book_detail

--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -39,7 +39,7 @@
                                 <li>Title: {{ book.name }}</li>
                                 <li>Author: {{ book.author }}</li>
                                 <li>Genre: {{ book.subjects.all.first }}</li>
-                                <li>Publisher: {{ book.publisher }}</li>
+                                <li>Publisher: {{ book.publisher.name }}</li>
                                 <li>ISBN: {{ book.isbn }}</li>
                                 <li>Vendor: {{ book.vendor }}</li>
                             </ul>
