--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,9 @@
 
 <body>
 
+                        {{ request.user.memeber.is_client }}
+
+
 <!-- Title bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
@@ -158,24 +161,29 @@
                     <i class="nav-item fas fa-user fa-lg"></i>
                 </a>
 
-                {% if request.user.is_authenticated %}
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="mem">
-                        <a class="dropdown-item" href="{% url "members:default_account" %}">Profile</a> {# TODO #}
-                        <div class="dropdown-divider"></div>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="mem">
 
-                        {% if request.user.memeber.vendor %}
-                            <a class="dropdown-item" href="{% url "vendors:vendor" %}">Vendor</a> {# TODO #}
+                    {% if request.user.is_authenticated %}
+                            <a class="dropdown-item" href="{% url "members:default_account" %}">Profile</a>
                             <div class="dropdown-divider"></div>
-                        {% endif %}
 
-                        <a class="dropdown-item" href="{% url 'members:logout' %}">Log out</a>
-                    </div>
-                {% else %}
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="mem">
-                        <a class="dropdown-item" href="{% url 'members:register' %}">Register</a>
-                        <a class="dropdown-item" href="{% url 'members:login' %}">Log in</a>
-                    </div>
-                {% endif %}
+                            {% if request.user.member.vendor is not None %}
+                                <a class="dropdown-item" href="{% url "vendors:vendor" %}">Vendor Page</a>
+                                <div class="dropdown-divider"></div>
+                            {% endif %}
+
+                            {% if user.member.is_client is True %}
+                                <a class="dropdown-item" href="{% url "analytics:reports_overview" %}">Client Page</a>
+                                <div class="dropdown-divider"></div>
+                            {% endif %}
+
+                            <a class="dropdown-item" href="{% url 'members:logout' %}">Log out</a>
+
+                    {% else %}
+                            <a class="dropdown-item" href="{% url 'members:register' %}">Register</a>
+                            <a class="dropdown-item" href="{% url 'members:login' %}">Log in</a>
+                    {% endif %}
+                </div>
 
             </div>
         </div>
