--- a/templates/book_sales.html
+++ b/templates/book_sales.html
@@ -3,110 +3,65 @@
 {% load static %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/eod.css' %}">
+
 {% endblock %}
 
 {% block main_content %}
 
-    <div class="container-fluid banner">
+
+    <div class="container">
+
+        <h1>Book Sales Report for {{ report.date }}</h1>
+
         <div class="row">
-            <div class="col-md-12">
-                <h4> Book Sales { Vendor }</h4>
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid">
-        <div class="row table-cont">
-            <div class="col-md-12">
-                <form>
-                    <fieldset class="form-group">
-                        <legend>Advanced Search:</legend>
-                        Author: <input type="text" class="form-control-sm" name="author"></input>
-                        Genre: <select class="form-control-sm">
-                        <option value="">{Genre}</option>
-                        <option value="">{Genre}</option>
-                        <option value="">{Genre}</option>
-                        <option value="">{Genre}</option>
-                        <option value="">{Genre}</option>
-                    </select>
-                        ISBN: <input type="text" class="form-control-sm" name="ISBN"></input>
-                        Time period: <select class="form-control-sm">
-                        <option value="">Past week</option>
-                        <option value="">Past month</option>
-                        <option value="">Past 60 days</option>
-                        <option value="">Past year</option>
-                    </select>
-                    </fieldset>
-                </form>
-            </div>
-            <div class="col-md-6">
-                <table class="table table-striped">
-                    <thead class="thead-dark">
+            <table class="table table-light table-bordered">
+                <thead class="thead-dark">
                     <tr>
-                        <th>Book Title</th>
+                        <th>Image</th>
+                        <th>Name</th>
+                        <th>Author</th>
+                        <th>ISBN</th>
+                        <th>Vendor</th>
+                        <th>Price</th>
+                        <th>Stock</th>
                         <th>Number Sold</th>
-                        <th>Revenue:</th>
+                        <th>Total Revenue from Book</th>
                     </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th>{Title}</th>
-                        <th>{Quantity}</th>
-                        <th>{$ Amount}</th>
-                    </tr>
-                    <tr>
-                        <th>{Title}</th>
-                        <th>{Quantity}</th>
-                        <th>{$ Amount}</th>
-                    </tr>
-                    <tr>
-                        <th>{Title}</th>
-                        <th>{Quantity}</th>
-                        <th>{$ Amount}</th>
-                    </tr>
-                    <tr>
-                        <th>{Title}</th>
-                        <th>{Quantity}</th>
-                        <th>{$ Amount}</th>
-                    </tr>
-                    <tbody>
-                </table>
-            </div>
-            <div class="col-md-6">
-                <table class="table table-striped">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>Credit Cards</th>
-                        <th>Cash</th>
-                        <th>Paypal</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th>$2,054,975.83</th>
-                        <th>$6,164,927.41</th>
-                        <th>$4,109,951.63</th>
-                    </tr>
-                    </tbody>
-                </table>
-                <table class="table table-striped">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>Promo Codes used</th>
-                        <th>Promo Amount</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th>{Amount used}</th>
-                        <th>{$ Amount users saved}</th>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+                </thead>
 
+                <tbody>
+                    {% for book, values in books.items %}
+                        <tr class="clickable-row" data-href="{{ book.get_absolute_url }}">
+                            <th><img class="img-responsive" src="{{ book.item_picture.url }}"/></th>
+                            <th>{{ book.name }}</th>
+                            <th>{{ book.author }}</th>
+                            <th>{{ book.isbn }}</th>
+                            <th>{{ book.vendor }}</th>
+                            <th>${{ book.price }}</th>
+                            <th>{{ book.count_in_stock }}</th>
+                            <th>{{ values.0 }}</th>
+                            <th>${{ values.1 | floatformat:2}}</th>
+                        </tr>
+                    {% endfor %}
+                <tbody>
+            </table>
         </div>
+
+        <a href="{% url "analytics:reports_overview" %}"><button>Back to Reports Overview</button></a>
+
     </div>
 
 {% endblock main_content %}
+
+{% block jquery %}
+
+    <script>
+
+        jQuery(document).ready(function($) {
+            $(".clickable-row").click(function() {
+                window.location = $(this).data("href");
+            });
+        });
+    </script>
+
+{% endblock %}
