--- a/templates/eod_report.html
+++ b/templates/eod_report.html
@@ -1,58 +1,60 @@
 {% extends "base.html" %}
 
 {% load static %}
+{% load eod_total %}
 
 {% block per_page_css %}
     <link rel="stylesheet" href="{% static 'css/eod.css' %}">
 {% endblock per_page_css %}
 
 {% block main_content %}
+    <div class="container">
 
-    <div class="container-fluid banner">
         <div class="row">
             <div class="col-md-12">
-                <h4> EoD Report { User }</h4>
+                <h4> End of Day report for {{ report.date }}</h4>
             </div>
         </div>
-    </div>
 
-    <div class="container-fluid">
-        <div class="row table-cont">
-            <div class="col-md-6">
-                <table class="table table-striped">
-                    <thead class="thead-dark">
+        <div class="row">
+            <table class="table table-light table-bordered">
+                <thead class="thead-dark">
                     <tr>
-                        <th>Number Books Sold</th>
-                        <th>Total Revenue</th>
+                        <th>User</th>
+                        <th>Confirmation ID</th>
+                        <th>Total</th>
+                        <th>Reservation</th>
+                        <th>Payment Processed</th>
                     </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th>1,000,000</th>
-                        <th>$12,329,854.87</th>
-                    </tr>
-                    <tbody>
-                </table>
-            </div>
-            <div class="col-md-6">
-                <table class="table table-striped">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>Credit Cards</th>
-                        <th>Cash</th>
-                        <th>Paypal</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th>$2,054,975.83</th>
-                        <th>$6,164,927.41</th>
-                        <th>$4,109,951.63</th>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+                </thead>
+
+                <tbody>
+                    {% for order in report.orders.all %}
+                        <tr class="clickable-row" data-href="{{ order.get_absolute_url }}">
+                            <th>{{ order.member_set.first }}</th>
+                            <th>{{ order.confirmation_number }}</th>
+                            <th>${{ order.price }}</th>
+
+                            {% if order.reservation %}
+                                <th id="amount 1"><i class="far fa-check-square"></i></th>
+                            {% else %}
+                                <th id="amount 1"><i class="far fa-times-circle"></i></th>
+                            {% endif %}
+
+                            {% if order.is_fulfilled or not order.reservation %}
+                                <th id="amount 1"><i class="far fa-check-square"></i></th>
+                            {% else %}
+                                <th id="amount 1"><i class="far fa-times-circle"></i></th>
+                            {% endif %}
+                        </tr>
+                    {% endfor %}
+                <tbody>
+            </table>
+
+        <h3>Total amount sold: ${% eod_total report %}</h3>
         </div>
+
+        <a href="{% url "analytics:eod_view" %}"><button>Back to End of Day Reports Overview</button></a>
     </div>
 
 {% endblock main_content %}
