--- a/templates/pub_sales.html
+++ b/templates/pub_sales.html
@@ -3,109 +3,40 @@
 {% load static %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/eod.css' %}">
-{% endblock per_page_css %}
+
+{% endblock %}
 
 {% block main_content %}
 
-    <div class="container-fluid banner">
+
+    <div class="container">
+
+        <h1>Book Sales Report for {{ report.date }}</h1>
+
         <div class="row">
-            <div class="col-md-12">
-                <h4> Publisher Sales { Vendor }</h4>
-            </div>
-        </div>
-    </div>
+            <table class="table table-light table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Name</th>
+                        <th>Number Sold</th>
+                        <th>Total Revenue</th>
+                    </tr>
+                </thead>
 
-    <div class="container-fluid">
-        <div class="row table-cont">
-            <div class="col-md-12">
-                <form>
-                    <fieldset class="form-group">
-                        <legend>Advanced Search:</legend>
-                        Publisher: <input type="text" class="form-control-sm" name="author"></input>
-                        Book: <select class="form-control-sm">
-                        <option value="">{Genre}</option>
-                        <option value="">{Genre}</option>
-                        <option value="">{Genre}</option>
-                        <option value="">{Genre}</option>
-                        <option value="">{Genre}</option>
-                    </select>
-                        Time period: <select class="form-control-sm">
-                        <option value="">Past week</option>
-                        <option value="">Past month</option>
-                        <option value="">Past 60 days</option>
-                        <option value="">Past year</option>
-                    </select>
-                    </fieldset>
-                </form>
-            </div>
-            <div class="col-md-6">
-                <table class="table table-striped">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>Publisher</th>
-                        <th>Books Sold</th>
-                        <th>Revenue:</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th>{Name}</th>
-                        <th>{Quantity}</th>
-                        <th>{$ Amount}</th>
-                    </tr>
-                    <tr>
-                        <th>{Name}</th>
-                        <th>{Quantity}</th>
-                        <th>{$ Amount}</th>
-                    </tr>
-                    <tr>
-                        <th>{Name}</th>
-                        <th>{Quantity}</th>
-                        <th>{$ Amount}</th>
-                    </tr>
-                    <tr>
-                        <th>{Name}</th>
-                        <th>{Quantity}</th>
-                        <th>{$ Amount}</th>
-                    </tr>
-                    <tbody>
-                </table>
-            </div>
-            <div class="col-md-6">
-                <table class="table table-striped">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>Credit Cards</th>
-                        <th>Cash</th>
-                        <th>Paypal</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th>$2,054,975.83</th>
-                        <th>$6,164,927.41</th>
-                        <th>$4,109,951.63</th>
-                    </tr>
-                    </tbody>
-                </table>
-                <table class="table table-striped">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>Promo Codes used</th>
-                        <th>Promo Amount</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th>{Amount used}</th>
-                        <th>{$ Amount users saved}</th>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-
+                <tbody>
+                    {% for publisher, values in publishers.items %}
+                        <tr>
+                            <th>{{ publisher.name }}</th>
+                            <th>{{ values.0 }}</th>
+                            <th>${{ values.1 | floatformat:2}}</th>
+                        </tr>
+                    {% endfor %}
+                <tbody>
+            </table>
         </div>
+
+        <a href="{% url "analytics:reports_overview" %}"><button>Back to Reports Overview</button></a>
+
     </div>
 
 {% endblock main_content %}
