--- a/templates/reports_overview.html
+++ b/templates/reports_overview.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block per_page_css %}
-    <link rel="stylesheet" href="{% static 'css/terminal.css' %}">
+{#    <link rel="stylesheet" href="{% static 'css/terminal.css' %}">#}
 {% endblock per_page_css %}
 
 {% block main_content %}
@@ -22,16 +22,16 @@
                 <h4>Reports:</h4>
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <button class="btn-sm btn-dark">End Of Day</button>
+                        <a href="{% url "analytics:eod_view" %}"><button class="btn-sm btn-dark">End Of Day</button></a>
                     </li>
                     <li class="list-group-item">
-                        <button class="btn-sm btn-dark">Low Inventory</button>
+                        <a href="{% url "analytics:low_inv_report" %}"><button class="btn-sm btn-dark">Low Inventory</button></a>
                     </li>
                     <li class="list-group-item">
-                        <button class="btn-sm btn-dark">Book Sales</button>
+                        <a href="{% url "analytics:book_sales_view" %}"><button class="btn-sm btn-dark">Book Sales</button></a>
                     </li>
                     <li class="list-group-item">
-                        <button class="btn-sm btn-dark">Publisher Sales</button>
+                        <a href="{% url "analytics:publisher_sales_view" %}"><button class="btn-sm btn-dark">Publisher Sales</button></a>
                     </li>
                 </ul>
             </div>
