--- a/templates/cart.html
+++ b/templates/cart.html
@@ -21,7 +21,7 @@
     {% endif %}
 
     <!-- send user instance as object, populate the page with it -->
-    <div class="container-fluid banner">
+    <div class="container-fluid banner text-center">
         <div class="row">
             <div class="col">
                 <img id="banner_img" src="{% static 'images/dogear.jpg' %}"/>
