--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container pad-bottom">
         <h1 class="text-center mb-3 mt-3">New Releases</h1>
         <div id="latest-books" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -107,7 +107,7 @@
     </div>
 
     <div class="container-fluid about-us">
-        <div class="row">
+        <div class="row align-items-end">
             <div class="col-md-12">
                 <h4>About Us:</h4>
                 <p>We are an e-commerce bookstore that allows vendors to connect with customers
