--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -42,7 +42,7 @@
 
     </div>
 
-    <div class="container">
+    <div class="container pad-top">
         <div class="row">
             <table class="table table-light table-bordered">
                 <thead class="thead-dark">
@@ -53,7 +53,6 @@
                         <th>Price per Unit</th>
                     </tr>
                 </thead>
-
                 <tbody>
                     {% for book in books_owned %}
                         <tr class="clickable-row" data-href="{{ book.get_absolute_url }}">
@@ -65,7 +64,7 @@
                     {% endfor %}
                 <tbody>
             </table>
-
+		</div>
         <div class="row">
             <table class="table table-light table-bordered">
                 <thead class="thead-dark">
@@ -77,7 +76,6 @@
                         <th>Payment Processed</th>
                     </tr>
                 </thead>
-
                 <tbody>
                     {% for order in orders %}
                         <tr class="clickable-row" data-href="{{ order.get_absolute_url }}">
