--- a/static/css/home.css
+++ b/static/css/home.css
@@ -9,6 +9,7 @@
 .banner img {
     height: 200px;
     width: 200px;
+	margin-top: 35px;
 }
 
 .banner #profile-btn {
@@ -52,6 +53,10 @@
 .book_elem_port {
     height: 240px;
     width: 180px;
+}
+
+.pad-bottom {
+	margin-bottom: 30px;
 }
 
 .center {
