--- a/templates/edit_account.html
+++ b/templates/edit_account.html
@@ -1,13 +1,46 @@
 {% extends "base.html" %}
+{% load static %}
+{% block per_page_css %}
+    <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
+{% endblock per_page_css %}
 {% block main_content %}
 
-<form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
-	{{user_form.as_p}}
-   {{member_form.as_p}}
-	<input type="submit" class='btn btn-default' value="Save Details"/>
-</form>
+	<div class="container-fluid banner">
+		<div class="row">
+			<div class="col-md-12">
+				<h3> Edit Account: {{ user.username }} </h3>
+			</div>
+		</div>
+	</div>
 
-<a href="{% url 'members:reset_password_form' %}"><button class='btn btn-default'>Reset Password</button></a>
-<a href="{% url 'members:delete' %}"><button class='btn btn-default'>Delete Account</button></a>
+	<div class="container confirm">
+		<div class="row">
+			<div class="offset-md-3 col-md-6">
+				<div class="card">
+					<div class="card-body">
+						<form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
+							{{user_form.as_p}}
+						    {{member_form.as_p}}
+							<div class="center">
+								<input type="submit" class='btn btn-default' value="Save Details"/>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
+	<div class="container confirm">
+		<div class="row">
+			<div class="offset-md-3 col-md-6">
+				<div class="card">
+					<div class="card-body center">
+						<a href="{% url 'members:reset_password_form' %}"><button class='btn btn-default'>Reset Password</button></a>
+						<a href="{% url 'members:delete' %}"><button class='btn btn-default'>Delete Account</button></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock main_content %}
