--- a/templates/vendor_add_book.html
+++ b/templates/vendor_add_book.html
@@ -1,9 +1,35 @@
 {% extends "base.html" %}
-{% block main_content %}
 
-    <form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
-        {{book_form.as_p}}
-        <input type="submit" class='btn btn-default' value="Add Book"/>
-    </form>
+{% load static %}
+
+{% block per_page_css %}
+    <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
+{% endblock per_page_css %}
+
+{% block main_content %}
+	<div class="container-fluid banner">
+		<div class="row">
+			<div class="col-md-12">
+				<h3>Vendor Add a Book </h3>
+			</div>
+		</div>
+	</div>
+
+	<div class="container confirm">
+		<div class="row">
+			<div class="offset-md-3 col-md-6">
+				<div class="card">
+					<div class="card-body">
+						<form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
+							{{book_form.as_p}}
+							<div class="center">
+								<input type="submit" class='btn btn-default' value="Add Book"/>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 {% endblock main_content %}
