--- a/templates/vendor_edit.html
+++ b/templates/vendor_edit.html
@@ -1,18 +1,62 @@
 {% extends "base.html" %}
-{% block main_content %}
-    Edit {{ book.name }}
 
-    <form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
-        {{book_form.as_p}}
-        <input type="submit" class='btn btn-default' value="Save Book"/>
-    </form>
+{% load static %}
+
+{% block per_page_css %}
+    <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
+{% endblock per_page_css %}
+
+{% block main_content %}
+
+	<div class="container-fluid banner">
+		<div class="row">
+			<div class="col-md-12">
+				<h3> Edit {{ book.name }} </h3>
+			</div>
+		</div>
+	</div>
+	
+		<div class="container confirm">
+			<div class="row">
+				<div class="offset-md-3 col-md-6">
+					<div class="card">
+						<div class="card-body">
+							<form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
+								{{book_form.as_p}}
+								<input type="submit" class='btn btn-default' value="Save Book"/>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
     <br>
 
     {% if book.is_active %}
-        <a href="{% url 'vendors:delete_book' book.slug %}"><button class='btn btn-default'>Delete Book</button></a>
+		<div class="container pad-bottom center">
+			<div class="row">
+				<div class="offset-md-4 col-md-4">
+					<div class="card bg-danger">
+						<div class="card-body">
+							<a href="{% url 'vendors:delete_book' book.slug %}"><button class='btn btn-default'>Delete Book</button></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
     {% else %}
-        <a href="{% url 'vendors:reactivate_book' book.slug %}"><button class='btn btn-default'>Reactivate Book</button></a>
+		<div class="container pad-bottom center">
+			<div class="row">
+				<div class="offset-md-4 col-md-4">
+					<div class="card">
+						<div class="card-body">
+							<a href="{% url 'vendors:reactivate_book' book.slug %}"><button class='btn btn-default'>Reactivate Book</button></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
     {% endif %}
 
 
