--- a/templates/vendor_edit.html
+++ b/templates/vendor_edit.html
@@ -23,7 +23,9 @@
 						<div class="card-body">
 							<form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
 								{{book_form.as_p}}
-								<input type="submit" class='btn btn-default' value="Save Book"/>
+								<div class="text-center">
+									<input type="submit" class='btn btn-default' value="Save Book"/>
+								</div>
 							</form>
 						</div>
 					</div>
@@ -37,11 +39,7 @@
 		<div class="container pad-bottom center">
 			<div class="row">
 				<div class="offset-md-4 col-md-4">
-					<div class="card bg-danger">
-						<div class="card-body">
-							<a href="{% url 'vendors:delete_book' book.slug %}"><button class='btn btn-default'>Delete Book</button></a>
-						</div>
-					</div>
+					<a href="{% url 'vendors:delete_book' book.slug %}"><button class='btn btn-danger'>Delete Book</button></a>
 				</div>
 			</div>
 		</div>
