--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -35,7 +35,7 @@
                             <img class="img-responsive" src="{{ book.item_picture.url }}"/>
                         </div>
                         <div class="col-md-8">
-                            <ul>
+                            <ul class="detes">
                                 <li><strong>Title:</strong> {{ book.name }}</li>
                                 <li><strong>Author:</strong> {{ book.author }}</li>
                                 <li><strong>Genre:</strong> {{ book.subjects.all.first }}</li>
