--- a/templates/reset_password_request.html
+++ b/templates/reset_password_request.html
@@ -1,9 +1,19 @@
 {% extends 'base.html' %}
-
+{% load static %}
+{% block per_page_css %}
+	<link rel="stylesheet" href="{% static 'css/reset_pass.css' %}">
+{% endblock %}
 {% block main_content %}
-
+	<div class="container-fluid banner">
+		<div class="row">
+			<div class="col-md-12">
+				<h3> Reset Password for: {{ user.username }} </h3>
+			</div>
+		</div>
+	</div>
+	
     {% if messages %}
-        <div class='messages'>
+        <div class='messages pad-top'>
             <ul class="messages">
                 {% for message in messages %}
                     <li {% if message.tags %} class="{{message.tags}}" {% endif %}> {{ message }} </li>
@@ -11,11 +21,20 @@
             </ul>
         </div>
     {% endif %}
-
-    <h1>Password Reset</h1>
-    <p>Please enter your email below. We will send you a link to reset your password.</p>
-    <form method="POST" action="{% url 'members:reset_password_form' %}" method="post" class="form-signin"> {% csrf_token %}
-        {{ reset_request_form.as_p }}
-        <input type="submit" class="btn-lg btn-dark" value="Send Code to Email">
-    </form>
+	<div class="container pad-top">
+		<div class="row">
+			<div class="offset-md-2 col-md-8">
+				<div class="card bg-light">
+					<div class="card-body">
+						<h1>Password Reset</h1>
+						<p>Please enter your email below. We will send you a link to reset your password.</p>
+						<form method="POST" action="{% url 'members:reset_password_form' %}" method="post" class="form-signin"> {% csrf_token %}
+							{{ reset_request_form.as_p }}
+							<input type="submit" class="btn-lg btn-dark" value="Send Code to Email">
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
