--- a/templates/pub_sales_view.html
+++ b/templates/pub_sales_view.html
@@ -4,16 +4,20 @@
 {% load publisher_report_total %}
 
 {% block per_page_css %}
-
+	<link rel="stylesheet" href="{% static 'css/pub-sales.css' %}">
 {% endblock %}
 
 {% block main_content %}
 
 
-    <div class="container">
-
-        <h1>Publisher Sales Reports</h1>
-
+    <div class="container-fluid banner">
+		<div class="row">
+			<div class="col-md-12">
+				<h3>Publisher Sales Reports</h3>
+			</div>
+		</div>
+	</div>
+	<div class="container pad-top">
         <div class="row">
             <table class="table table-light table-bordered">
                 <thead class="thead-dark">
