--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -3,19 +3,30 @@
 {% block main_content %}
 
     {% if messages %}
-        <div class='messages'>
-            <ul class="messages">
-                {% for message in messages %}
-                    <li {% if message.tags %} class="{{message.tags}}" {% endif %}> {{ message }} </li>
-                {% endfor %}
-            </ul>
-        </div>
+	<div class="container">
+		<div class="row">
+			<div class="offset-md-4 col-md-4">
+				<div class='messages'>
+					<ul class="messages">
+						{% for message in messages %}
+							<li {% if message.tags %} class="{{message.tags}}" {% endif %}> {{ message }} </li>
+						{% endfor %}
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
     {% endif %}
-
-    <h1>Password Reset</h1>
-    <p>Please enter your new password:</p>
-    <form method="POST" action="" method="post" class="form-signin"> {% csrf_token %}
-        {{ password_reset_form.as_p }}
-        <input type="submit" class="btn-lg btn-dark" value="Reset Password">
-    </form>
+	<div class="container">
+		<div class="row">
+			<div class="offset-md-4 col-md-4">
+				<h1>Password Reset</h1>
+				<p>Please enter your new password:</p>
+				<form method="POST" action="" method="post" class="form-signin"> {% csrf_token %}
+					{{ password_reset_form.as_p }}
+					<input type="submit" class="btn-lg btn-dark" value="Reset Password">
+				</form>
+			</div>
+		</div>
+	</div>
 {% endblock %}
