--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -5,7 +5,7 @@
     {% if messages %}
 	<div class="container">
 		<div class="row">
-			<div class="offset-md-4 col-md-4">
+			<div class="offset-md-3 col-md-6">
 				<div class='messages'>
 					<ul class="messages">
 						{% for message in messages %}
@@ -19,13 +19,17 @@
     {% endif %}
 	<div class="container">
 		<div class="row">
-			<div class="offset-md-4 col-md-4">
-				<h1>Password Reset</h1>
-				<p>Please enter your new password:</p>
-				<form method="POST" action="" method="post" class="form-signin"> {% csrf_token %}
-					{{ password_reset_form.as_p }}
-					<input type="submit" class="btn-lg btn-dark" value="Reset Password">
-				</form>
+			<div class="offset-md-3 col-md-6">
+				<div class="card">
+					<div class="card-body">
+						<h1>Password Reset</h1>
+						<p>Please enter your new password:</p>
+						<form method="POST" action="" method="post" class="form-signin"> {% csrf_token %}
+							{{ password_reset_form.as_p }}
+							<input type="submit" class="btn-lg btn-dark" value="Reset Password">
+						</form>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
